# autobox-mcp

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER_USAGE.md  Dockerfile  INSTALL.md  README.md  docker-compose.yml  eslint.config.mjs  jest.config.js  package.json  pyproject.toml  pytest.ini  remove.txt  tsconfig.json
.github/workflows/: tests.yml
autobox/: __init__.py  server.py
autobox/docker/: __init__.py  manager.py
autobox/models/: __init__.py  schemas.py
src/: index.ts
src/config/: index.ts  paths.ts
src/docker/: manager.ts
src/mcp/: index.ts  metricsGenerator.ts  server.ts  tools.ts
src/types/: index.ts  simulation.ts
src/utils/: logger.ts
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  mcp-server.test.ts  test_docker_integration.py  test_mcp_protocol.py
tests/scripts/: test_mcp_manual.py
tests/unit/: __init__.py  config.test.ts  docker.test.ts  logger.test.ts  metricsGenerator.test.ts  test_basic.py  test_delete_simulation.py  test_docker_manager.py  test_instruct_agent.py  test_server.py  test_stop_all_simulations.py
